# Bskycord

./: .env  Cargo.toml  README.md
.sqlx/: query-1724c4db8d8d908c0562c5dc67edb0392e3d47bcc7d3ab9d83589ca5e69941af.json  query-36c1ec7246ac397063ff2638488e23548840e56b7cae18ed0a7e9c91d3de58c2.json  query-4d4b0e71563263aa0d973191fb9b6e41e0bb970ca27f00041b65cdf6793f1002.json  query-596842a226e8534a7430ad1a0f2c32b1cfdf5163ae73da9e41fada660933e81a.json  query-680296922bafadc28d561412a85fc06fae152ac68894c0df91591cc729fcfa18.json  query-7207ca5419d295c654c63c68a066a136eacb482850608c2bfccaf0213132bf03.json  query-8f6a8c7e2576a5a7c677dc4dce400148bd1ae5f96858fdaccc39c5af5cb863c1.json  query-9a69757367aad133d2d540beaf2bb3c1eb506a144e863fcf236220616e1f066a.json  query-b851eaced88dedb8be4d5d5e0eb5d5be007412e515ed3f135a984a66fb72e7f3.json  query-bba75cb6b22bd58a8dcb0ae920b4777e0ae20c2a09f271805ae0083855203d54.json  query-eb097252e2c88ea9e93295b6743e2304340c55bc5c7410899569a42623b70daa.json  query-ebd1ed1046cc1e2cb30a31d45b1969122f9bf5280de27bcaccda751859bf5a77.json  query-f56028d5c5d0fdb9320f2dd8ff4fa60619eda07c2d75548890c6359097eb8ca5.json  query-f887f14545c34fdb0080959085fcb205858388fa023b72120e6ae7ba76fd9754.json  query-f9e9effeea537a632aa4458d1fa731816390fa2aa9db602fbe3cc1d8ac041d9c.json
lib/: Cargo.toml  bot.rs  commands.rs  lib.rs  poll.rs
migrations/: 001_init.sql
src/: commands.rs  data.rs  main.rs  poll.rs
