[package]
name = "bskycord"
version = "0.0.0"
edition = "2024"
publish = false
license = "MIT"

[dependencies]
anyhow = "1.0.100"
bsky-sdk = "0.1.23"
chrono = "0.4.43"
dotenvy = "0.15.7"
futures-util = "0.3.31"
poise = "0.6.1"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
